Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <div class="hero-badge">Sanyasi Gudde, Balmatta</div>
+            <div class="hero-badge">Sanyasi Gudda, Balmatta</div>
             <h1 style="margin: 20px 0;">Welcome to <br><span class="gold-text">2026</span></h1>
             <p style="color: #aaa; letter-spacing: 1px;">37th YEAR NEW YEAR CELEBRATION COMMITTEE</p>
             <p style="font-size: 0.9rem; color: #888; margin-top: 10px;">Venue: Dwaraka Youth Club Premises</p>
@@ -44,4 +44,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
