--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="glass-panel table-responsive">
                     <table class="glass-table" id="regTable">
-                        <thead><tr><th>Flat</th><th>Name</th><th>Adults</th><th>Kids</th><th>Date</th><th>Actions</th></tr></thead>
+                        <thead><tr><th>Name</th><th>Adults</th><th>Kids</th><th>Date</th><th>Actions</th></tr></thead>
                         <tbody></tbody>
                     </table>
                 </div>
