Fix HTML formatting and structure in register.html

--- a/register.html
+++ b/register.html
@@ -26,10 +26,10 @@
 
     <section class="hero">
         <div class="container">
-            <h2 class="section-title" style="margin-bottom: 30px;">Secure Your Spot</h2>
+            <h2 class="section-title" style="margin-bottom: 30px;"></h2>
             <form id="registrationForm" class="glass-panel" style="max-width: 500px; margin: 0 auto;">
                 <input type="text" id="name" placeholder="Family Name" required>
-                <input type="text" id="flatNo" placeholder="Flat Number" required>
+                
                 <div style="display: flex; gap: 10px;">
                     <input type="number" id="adults" placeholder="Adults" min="1" required>
                     <input type="number" id="kids" placeholder="Kids" min="0">
