Revise About Us page for 2026 event
Updated the About Us page for the 2026 New Year Bash, including new content and styling improvements.

--- a/about.html
+++ b/about.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - New Year Bash</title>
+    <meta name="description" content="Meet the organizers of the 37th New Year Celebration at Dwaraka Youth Club">
+    <title>About Us - New Year Bash 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <div id="loader">
         <div class="loader-content">
             <div class="loader-line"></div>
             <div class="loader-text">ORGANIZERS</div>
-            <h1 class="loader-year"></h1>
+            <h1 class="loader-year">2026</h1>
         </div>
     </div>
 
@@ -24,21 +28,64 @@
         <ul class="nav-links"></ul>
     </nav>
 
-    <section class="container" style="text-align: center; padding-top: 150px;">
-        <h2 class="section-title">Organizers</h2>
-        <h3 style="color: #666; font-size: 1rem; letter-spacing: 2px;">WITH BEST WISHES FROM</h3>
-        <p style="color: white; margin-top: 15px;">Sir A.C. Vinay Raj</p>
-        <p style="color: #888; font-size: 0.8rem;">Corporator, 40th Court Ward, Mangaluru</p>
-        
-        <div style="margin-top: 30px; color: #888; font-size: 0.9rem; line-height: 1.8;">
-            <p>Ravi, Sudheer, Anil, Jayaprakash, Harish, Sunil,<br> Rahul, Gautham, Ajay, S. Samanth</p>
-            <p style="font-size: 0.8rem; color: #555;">(Friends Abroad & Families)</p>
+    <section class="container" style="text-align: center; padding-top: 120px;">
+        <h2 class="section-title">
+            <i class="fas fa-users" style="color: var(--accent); margin-right: 15px; font-size: 0.8em;"></i>
+            Organizers
+        </h2>
+
+        <div class="glass-panel" style="max-width: 600px; margin: 0 auto;">
+            <div style="margin-bottom: 35px;">
+                <h3
+                    style="color: rgba(255,255,255,0.5); font-size: 0.85rem; letter-spacing: 3px; text-transform: uppercase; margin-bottom: 20px;">
+                    With Best Wishes From
+                </h3>
+
+                <div
+                    style="background: rgba(212, 175, 55, 0.1); border: 1px solid rgba(212, 175, 55, 0.2); border-radius: 16px; padding: 25px; margin-bottom: 30px;">
+                    <p style="color: white; font-size: 1.2rem; font-weight: 500; margin: 0;">
+                        <i class="fas fa-user-tie" style="color: var(--accent); margin-right: 10px;"></i>
+                        Sir A.C. Vinay Raj
+                    </p>
+                    <p style="color: var(--text-muted); font-size: 0.85rem; margin-top: 8px;">
+                        Corporator, 40th Court Ward, Mangaluru
+                    </p>
+                </div>
+            </div>
+
+            <div style="border-top: 1px solid rgba(255,255,255,0.08); padding-top: 30px;">
+                <h4
+                    style="color: rgba(255,255,255,0.6); font-size: 0.8rem; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px;">
+                    <i class="fas fa-heart" style="color: var(--accent); margin-right: 8px;"></i>
+                    Committee Members
+                </h4>
+
+                <p style="color: rgba(255,255,255,0.7); font-size: 0.95rem; line-height: 2;">
+                    Ravi, Sudheer, Anil, Jayaprakash, Harish, Sunil,<br>
+                    Rahul, Gautham, Ajay, S. Samanth
+                </p>
+
+                <p style="font-size: 0.8rem; color: rgba(255,255,255,0.4); margin-top: 15px; font-style: italic;">
+                    <i class="fas fa-globe" style="margin-right: 5px;"></i>
+                    (Friends Abroad & Families)
+                </p>
+            </div>
+        </div>
+
+        <div style="margin-top: 40px;">
+            <a href="register.html" class="btn-highlight"
+                style="text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                <i class="fas fa-user-plus"></i>
+                Join the Celebration
+            </a>
         </div>
     </section>
 
-    <footer style="text-align: center; padding: 40px; color: #444; font-size: 0.8rem;">
+    <footer style="text-align: center; padding: 40px; color: rgba(255,255,255,0.25); font-size: 0.8rem;">
         <p>&copy; 2026 Celebration Committee</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
+
 </html>
