--- a/admin.html
+++ b/admin.html
@@ -1,47 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Admin panel for managing New Year 2026 celebration registrations">
     <title>Registration Admin - New Year 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
-    <div id="loginOverlay" class="glass-panel" style="position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); z-index:9999; text-align:center;">
-        <h2 style="color:white; margin-top:0;">Admin Access</h2>
-        <input type="password" id="adminPass" placeholder="Enter PIN Code" style="text-align:center;">
-        <button onclick="checkLogin()" class="btn-primary">Unlock</button>
+    <div id="loginOverlay" class="glass-panel"
+        style="position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); z-index:9999; text-align:center; max-width: 380px; width: 90%;">
+        <div
+            style="width: 70px; height: 70px; background: rgba(212, 175, 55, 0.15); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
+            <i class="fas fa-lock" style="color: var(--accent); font-size: 1.8rem;"></i>
+        </div>
+        <h2 style="color: white; margin: 0 0 10px 0; font-weight: 500;">Admin Access</h2>
+        <p style="color: var(--text-muted); font-size: 0.85rem; margin-bottom: 25px;">Enter PIN to access the dashboard
+        </p>
+        <input type="password" id="adminPass" placeholder="Enter PIN Code"
+            style="text-align: center; font-size: 1.2rem; letter-spacing: 8px;">
+        <button onclick="checkLogin()" class="btn-primary"
+            style="display: flex; align-items: center; justify-content: center; gap: 10px;">
+            <i class="fas fa-unlock-alt"></i>
+            Unlock Dashboard
+        </button>
     </div>
 
     <div id="adminPanel" style="display: none;">
         <nav class="nav-dock">
-            <div class="menu-toggle" id="mobile-menu"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+            </div>
             <ul class="nav-links">
-                <li style="color:var(--accent); font-weight:bold;">DATABASE</li>
-                <li><a href="index.html">Live Site</a></li>
-                <li><a href="#" onclick="location.reload()">Logout</a></li>
+                <li style="color: var(--accent); font-weight: 600; letter-spacing: 1px;">
+                    <i class="fas fa-database" style="margin-right: 8px;"></i>DATABASE
+                </li>
+                <li><a href="index.html"><i class="fas fa-external-link-alt"
+                            style="margin-right: 5px; font-size: 0.8em;"></i>Live Site</a></li>
+                <li><a href="#" onclick="sessionStorage.removeItem('admin_logged_in'); location.reload()"><i
+                            class="fas fa-sign-out-alt" style="margin-right: 5px; font-size: 0.8em;"></i>Logout</a></li>
             </ul>
         </nav>
 
-        <div class="container" style="padding-top: 150px;">
-            <div class="admin-header" style="text-align:center; margin-bottom:40px;"><h1>Registration Data</h1></div>
+        <div class="container" style="padding-top: 120px;">
+            <div style="text-align: center; margin-bottom: 50px;">
+                <h1 style="font-weight: 400; font-size: 2rem; margin-bottom: 10px;">
+                    <i class="fas fa-chart-bar" style="color: var(--accent); margin-right: 15px;"></i>
+                    Registration Dashboard
+                </h1>
+                <p style="color: var(--text-muted); font-size: 0.9rem;">Manage and view all registrations</p>
+            </div>
+
             <div id="dataPanel">
-                 <div style="display: flex; gap: 20px; margin-bottom: 20px; flex-wrap:wrap;">
-                    <div class="stat-card" style="padding: 15px; flex:1;"><h3>Total Families</h3><p id="totalFamilies" style="font-size: 2rem;">0</p></div>
-                    <div class="stat-card" style="padding: 15px; flex:1;"><h3>Total Guests</h3><p id="totalPeople" style="font-size: 2rem;">0</p></div>
-                    <div style="flex:1; display:flex; align-items:center; justify-content:center;"><button onclick="clearAllData()" class="btn-danger">Reset DB</button></div>
+                <div
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px;">
+                    <div class="stat-card" style="padding: 25px;">
+                        <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
+                            <div
+                                style="width: 50px; height: 50px; background: rgba(212, 175, 55, 0.15); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                                <i class="fas fa-home" style="color: var(--accent); font-size: 1.3rem;"></i>
+                            </div>
+                            <div style="text-align: left;">
+                                <h3
+                                    style="color: var(--text-muted); font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; margin: 0;">
+                                    Families</h3>
+                                <p id="totalFamilies"
+                                    style="font-size: 2.2rem; font-weight: 300; margin: 5px 0 0 0; color: white;">0</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="stat-card" style="padding: 25px;">
+                        <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
+                            <div
+                                style="width: 50px; height: 50px; background: rgba(212, 175, 55, 0.15); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                                <i class="fas fa-users" style="color: var(--accent); font-size: 1.3rem;"></i>
+                            </div>
+                            <div style="text-align: left;">
+                                <h3
+                                    style="color: var(--text-muted); font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; margin: 0;">
+                                    Total Guests</h3>
+                                <p id="totalPeople"
+                                    style="font-size: 2.2rem; font-weight: 300; margin: 5px 0 0 0; color: white;">0</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="stat-card"
+                        style="padding: 25px; display: flex; align-items: center; justify-content: center;">
+                        <button onclick="clearAllData()" class="btn-danger"
+                            style="display: flex; align-items: center; justify-content: center; gap: 10px; width: auto; padding: 12px 25px;">
+                            <i class="fas fa-trash-alt"></i>
+                            Reset Database
+                        </button>
+                    </div>
                 </div>
-                <div class="glass-panel table-responsive">
-                    <table class="glass-table" id="regTable">
-                        <thead><tr><th>Name</th><th>Adults</th><th>Kids</th><th>Date</th><th>Actions</th></tr></thead>
+
+                <div class="glass-panel table-responsive" style="padding: 25px;">
+                    <table class="glass-table" id="regTable" style="width: 100%;">
+                        <thead>
+                            <tr>
+                                <th><i class="fas fa-user" style="margin-right: 8px; opacity: 0.7;"></i>Name</th>
+                                <th style="text-align: center;"><i class="fas fa-users"
+                                        style="margin-right: 8px; opacity: 0.7;"></i>Adults</th>
+                                <th style="text-align: center;"><i class="fas fa-child"
+                                        style="margin-right: 8px; opacity: 0.7;"></i>Kids</th>
+                                <th><i class="far fa-calendar" style="margin-right: 8px; opacity: 0.7;"></i>Date</th>
+                                <th style="text-align: center;">Actions</th>
+                            </tr>
+                        </thead>
                         <tbody></tbody>
                     </table>
+
+                    <div id="emptyState" style="text-align: center; padding: 50px 20px; display: none;">
+                        <i class="fas fa-inbox"
+                            style="font-size: 3rem; color: rgba(255,255,255,0.2); margin-bottom: 15px;"></i>
+                        <p style="color: var(--text-muted);">No registrations yet</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
