Revise index.html for New Year 2026 celebration
Updated the HTML structure and content for the New Year 2026 celebration page, including improved semantics and added meta description.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - New Year Bash</title>
+    <meta name="description"
+        content="Join us for the 37th New Year Celebration at Dwaraka Youth Club - A night of fun, games, and celebration!">
+    <title>New Year 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <div id="loader">
         <div class="loader-content">
             <div class="loader-line"></div>
             <div class="loader-text">37th CELEBRATION</div>
-            <h1 class="loader-year"></h1>
+            <h1 class="loader-year">2026</h1>
         </div>
     </div>
 
@@ -26,22 +31,45 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <div class="hero-badge">Sanyasi Gudde, Balmatta</div>
-            <h1 style="margin: 20px 0;">Welcome to <br><span class="gold-text">2026</span></h1>
-            <p style="color: #aaa; letter-spacing: 1px;">37th YEAR NEW YEAR CELEBRATION COMMITTEE</p>
-            <p style="font-size: 0.9rem; color: #888; margin-top: 10px;">Venue: Dwaraka Youth Club Premises</p>
-            <div id="countdown" style="margin-top: 30px; font-size: 1.5rem; color:white;">
-                <span id="days">00</span>d : <span id="hours">00</span>h : <span id="minutes">00</span>m
+            <div class="hero-badge">
+                <i class="fas fa-map-marker-alt" style="margin-right: 8px; opacity: 0.8;"></i>
+                Sanyasi Gudde, Balmatta
             </div>
-            <div style="margin-top: 40px;">
-                <a href="register.html" class="btn-highlight" style="text-decoration: none;">Register</a>
+
+            <h1 style="margin: 25px 0; font-size: clamp(2.5rem, 8vw, 4.5rem); font-weight: 300; line-height: 1.2;">
+                Welcome to <br>
+                <span class="gold-text" style="font-weight: 600;">2026</span>
+            </h1>
+
+            <p
+                style="color: rgba(255,255,255,0.7); letter-spacing: 2px; font-size: 0.85rem; text-transform: uppercase;">
+                37th Year New Year Celebration Committee
+            </p>
+
+            <p style="font-size: 0.85rem; color: rgba(255,255,255,0.5); margin-top: 12px;">
+                <i class="fas fa-building" style="margin-right: 8px;"></i>
+                Venue: Dwaraka Youth Club Premises
+            </p>
+
+            <div id="countdown" style="margin-top: 40px;"></div>
+
+            <div style="margin-top: 50px;">
+                <a href="register.html" class="btn-highlight"
+                    style="text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                    <i class="fas fa-user-plus"></i>
+                    Register Now
+                </a>
             </div>
         </div>
     </section>
 
-    <footer style="text-align: center; padding: 40px; color: #444; font-size: 0.8rem; padding-bottom: 100px;">
-        <p>&copy; 2026 Celebration Committee | <a href="admin.html" style="color: #666; text-decoration: none;">Admin</a></p>
+    <footer
+        style="text-align: center; padding: 40px; color: rgba(255,255,255,0.25); font-size: 0.8rem; padding-bottom: 100px;">
+        <p>&copy; 2026 Celebration Committee | <a href="admin.html"
+                style="color: rgba(255,255,255,0.35); text-decoration: none; transition: color 0.3s;">Admin</a></p>
     </footer>
+
     <script src="script.js"></script>
 </body>
+
 </html>
