--- a/register.html
+++ b/register.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Register for the New Year 2026 celebration - Join us at Dwaraka Youth Club">
     <title>Register - New Year Bash 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <div id="loader">
         <div class="loader-content">
             <div class="loader-line"></div>
             <div class="loader-text">JOIN US</div>
-            <h1 class="loader-year"></h1>
+            <h1 class="loader-year">2026</h1>
         </div>
     </div>
 
@@ -24,20 +28,57 @@
         <ul class="nav-links"></ul>
     </nav>
 
-    <section class="hero">
-        <div class="container">
-            <h2 class="section-title" style="margin-bottom: 30px;"></h2>
-            <form id="registrationForm" class="glass-panel" style="max-width: 500px; margin: 0 auto;">
-                <input type="text" id="name" placeholder="Family Name" required>
-                
-                <div style="display: flex; gap: 10px;">
-                    <input type="number" id="adults" placeholder="Adults" min="1" required>
-                    <input type="number" id="kids" placeholder="Kids" min="0">
+    <section class="hero" style="min-height: 100vh;">
+        <div class="container" style="padding-top: 80px;">
+            <div style="text-align: center; margin-bottom: 40px;">
+                <div
+                    style="width: 80px; height: 80px; background: rgba(212, 175, 55, 0.15); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
+                    <i class="fas fa-user-plus" style="color: var(--accent); font-size: 2rem;"></i>
                 </div>
-                <button type="submit" class="btn-primary">Confirm Presence</button>
+                <h2 class="section-title" style="margin-bottom: 10px;">Register Your Family</h2>
+                <p style="color: var(--text-muted); font-size: 0.9rem;">Confirm your presence for the celebration</p>
+            </div>
+
+            <form id="registrationForm" class="glass-panel" style="max-width: 450px; margin: 0 auto;">
+                <div style="margin-bottom: 5px;">
+                    <label style="font-size: 0.85rem; color: var(--text-muted); display: block; margin-bottom: 8px;">
+                        <i class="fas fa-home" style="margin-right: 8px;"></i>Family Name
+                    </label>
+                    <input type="text" id="name" placeholder="Enter your family name" required>
+                </div>
+
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
+                    <div>
+                        <label
+                            style="font-size: 0.85rem; color: var(--text-muted); display: block; margin-bottom: 8px;">
+                            <i class="fas fa-users" style="margin-right: 8px;"></i>Adults
+                        </label>
+                        <input type="number" id="adults" placeholder="0" min="1" required>
+                    </div>
+                    <div>
+                        <label
+                            style="font-size: 0.85rem; color: var(--text-muted); display: block; margin-bottom: 8px;">
+                            <i class="fas fa-child" style="margin-right: 8px;"></i>Kids
+                        </label>
+                        <input type="number" id="kids" placeholder="0" min="0">
+                    </div>
+                </div>
+
+                <button type="submit" class="btn-primary"
+                    style="margin-top: 10px; display: flex; align-items: center; justify-content: center; gap: 10px;">
+                    <i class="fas fa-check-circle"></i>
+                    Confirm Presence
+                </button>
             </form>
+
+            <p style="text-align: center; color: rgba(255,255,255,0.4); font-size: 0.8rem; margin-top: 25px;">
+                <i class="fas fa-lock" style="margin-right: 5px;"></i>
+                Your information is stored locally and securely
+            </p>
         </div>
     </section>
+
     <script src="script.js"></script>
 </body>
+
 </html>
