--- a/schedule.html
+++ b/schedule.html
@@ -84,7 +84,7 @@
                     </span>
                     <span class="schedule-event"
                         style="color: white; font-weight: 600; text-shadow: 0 0 20px rgba(255,255,255,0.5);">
-                        🎉 Welcome New Year 2026 🎉
+                        Welcome New Year 2026
                     </span>
                 </li>
             </ul>
