--- a/competitions.html
+++ b/competitions.html
@@ -64,12 +64,18 @@
                     <li>Only Rangoli powder allowed</li>
                 </ul>
 
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeP0GOsJqDiRj97sQ9PYyNMFDF_pGXO12fh-w9pRdl1kJAckQ/viewform?usp=pp_url&entry.449603411=Rangoli"
-                    target="_blank" class="btn-primary"
-                    style="text-align: center; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                    <i class="fas fa-external-link-alt"></i>
-                    Register for Rangoli
-                </a>
+                <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                    <span class="btn-disabled"
+                        style="flex: 1; text-align: center; display: flex; align-items: center; justify-content: center; gap: 10px; background: rgba(255,255,255,0.1); color: rgba(255,255,255,0.5); cursor: not-allowed; padding: 12px 16px; border-radius: 8px; font-size: 0.85rem;">
+                        <i class="fas fa-lock"></i>
+                        Closed
+                    </span>
+                    <a href="rangoli-winners.html" class="btn-primary"
+                        style="flex: 1; text-align: center; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 12px 16px; font-size: 0.85rem;">
+                        <i class="fas fa-trophy"></i>
+                        Winners
+                    </a>
+                </div>
             </div>
 
             <!-- Drawing Competition Card -->
